# q-explore

./: .gitignore  Cargo.toml  TODO.md  package-lock.json  package.json  playwright.config.ts
e2e/: basic.spec.ts  generate.spec.ts  history.spec.ts  settings.spec.ts
src/: constants.rs  error.rs  lib.rs  main.rs
src/cli/: config.rs  generate.rs  history.rs  mod.rs  serve.rs  status.rs
src/config/: defaults.rs  mod.rs
src/coord/: anomaly.rs  density.rs  flower.rs  mod.rs  point.rs
src/entropy/: mod.rs  tests.rs
src/format/: gpx.rs  json.rs  mod.rs  text.rs  url.rs
src/geo/: ip_location.rs  mod.rs  nominatim.rs
src/history/: mod.rs
src/qrng/: anu.rs  mod.rs  pseudo.rs
src/server/: mod.rs  routes.rs  state.rs
static/: index.html
static/css/: helpers.css  style.css  vars.css
static/js/: generate.js  history.js  main.js  map.js  settings.js
