[package]
name = "q-explore"
version = "0.1.0"
edition = "2021"
description = "Quantum random coordinate generator"
authors = ["shitchell"]
license = "MIT"

[[bin]]
name = "q-explore"
path = "src/main.rs"

[lib]
name = "q_explore"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
urlencoding = "2"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["fs"] }

[dev-dependencies]
approx = "0.5"
tempfile = "3"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
